// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonToggle extends button props like color 1`] = `
<button
  aria-label="aria-label"
  aria-pressed="false"
  class="euiButton euiButton--danger testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    >
      Toggle
    </span>
  </span>
</button>
`;

exports[`EuiButtonToggle is rendered 1`] = `
<button
  aria-label="aria-label"
  aria-pressed="false"
  class="euiButton euiButton--primary testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    >
      Toggle
    </span>
  </span>
</button>
`;

exports[`EuiButtonToggle isSelected is rendered 1`] = `
<button
  aria-label="aria-label"
  aria-pressed="true"
  class="euiButton euiButton--primary euiButton--fill testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    >
      Toggle
    </span>
  </span>
</button>
`;
